# raygun

./: .gitignore  LICENSE  README.md  hubconf.py  pyproject.toml  setup.py  setup.py.bak
.github/workflows/: python-tests.yml
data/fastas/: ATLAS_train.fasta  ATLAS_valid.fasta  all_gfp_seqs.fasta  egfp_mcherry.fasta
example-configs/lacZ/: generate-sample-lacZ-v1.yaml  generate-sample-lacZ-v2.yaml  lacZ-selected-family.fasta  lacZ-template.fasta  leninfo-lacZ.json  train_lacZ.yaml
example-configs/rhodopsin/: generate-sample-rhodopsin.yaml  lengthinfo.json  selected-PF00001-prots.fasta  templates.fasta  train.yaml
example-configs/version2/: egfp_mcherry_175-199.json  sample.yaml  train.yaml
example-sh/: ALL.fasta  generate-with-ftuning.sh  leninfo.json  template.fasta  test.fasta  train.fasta
notebooks/: finetune.ipynb  get_fixedlength_repr.ipynb  modify_lengths.ipynb  raygunv2_simple_demo.ipynb  single_sequence_demo.ipynb  swissprot_human_seqid.ipynb
notebooks/tests/: test_model3_checkpointing.ipynb
raygun/: __init__.py  fluorescentloader.py  loader.py  metrics.py  pll.py  pretrained.py  raygun.py  train_utils.py
raygun/commands/: embed.py  finetune.py  generate_samples.py  generate_samples_multiple.py  generate_samples_single.py  train.py
raygun/model/: esmdecoder.py  expansion.py  model_utils.py  raygun.py  reduction.py  repitition.py
raygun/modelv2/: esmdecoder.py  loader.py  ltraygun.py  raygun.py  reduction.py  training.py
raygun/modelv3/: change.py  change_length.py  loader.py  ltraygun.py  model_utils.py  raygun.py  reduction.py  repetition.py  training.py
raygun/old_modelv1/: fluorescentmodel.py  raygun.py  repitition.py
tests/: test_ltraygun_training.py  test_math.py  test_model_access.py  test_raygun_generation.py
(+5 files in other folders)
